<resources>
    <string name="app_name">TUG Test</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <string name="permissions_notification_title">Permissions required</string>
    <string name="permissions_notification_body">Permissions needed for the application to work</string>
    <string name="permissions_info">Going to request permissions</string>
    <string name="permissions_thanks">Thanks!</string>
    <string name="permissions_denied">Permissions denied!</string>
    <string name="permissions_denied_info">Permissions rejected: </string>

    <string name="sensorization_notification_title">Sensorization</string>
    <string name="sensorization_notification_text">Collecting data from sensors</string>

    <string name="start_info">Tap "Start test" to start a TUG test. The watch will vibrate when you can start executing it</string>
    <string name="start_test">Start test</string>
    <string name="wait_info">Wait for vibration to start.</string>
    <string name="execution_info">You can start the test. It will automatically end when you sit down. You can manually stop it by tapping "End test"</string>
    <string name="end_test">End test</string>

    <string name="start_collection_info">Tap "Start collection" to start collecting data. The watch will vibrate when collection started.</string>
    <string name="start_collection">Start collection</string>
    <string name="collection_info">You can start the execution of the test. Tap Stop collection to end data collection.</string>
    <string name="end_collection">Stop collection</string>
    <string name="title_activity_result">ResultActivity</string>

    <string name="result_title">TUG Result</string>
    <string name="result_info_success">Time used to perform the test:</string>
    <string name="result_info_failure">Unable to compute results due to recognition errors. Please, repeat the test.</string>
    <string name="result_info_proc_breach">TUG test aborted due to procedural breach. Please, repeat the test.</string>
    <string name="result_info_unknown">Unknown error. Please, repeat the test.</string>
    <string name="result_unit">seconds</string>
    <string name="result_extended_info">Go to smartphone app to see detailed results</string>

    <string name="ntp_sync_error">Unable to sync with NTP</string>
</resources>