<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ResultActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:boxedEdges="all">

        <TextView
            android:id="@+id/result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/result_title"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_info_success"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12.43"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="4dp"
                android:text="@string/result_unit"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/result_extended_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_extended_info"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.wear.widget.BoxInsetLayout>