<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:keepScreenOn="true"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginBottom="10dp"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/start_info" />

            <Button
                android:id="@+id/start_command"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_margin="10dp"
                android:onClick="onStartCommandTap"
                android:text="@string/start_test" />

            <ProgressBar
                android:id="@+id/waitBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/stop_command"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_margin="10dp"
                android:onClick="onStopCommandTap"
                android:visibility="gone"
                android:text="@string/end_test" />
        </LinearLayout>


    <ToggleButton
        android:id="@+id/toggleMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-5dp"
        android:checked="true"
        android:textOff="COLLECTION"
        android:textOn="TUG" />
</FrameLayout>